--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div class="nav grid-4"><img src="ceprus.R5E56.jpg" alt="bottle"><p class="tle-4">Лучшие места на</p><p class="vtor4">Кипре</p></div>
         <div class="footer grid-5"><img src="vetnam.QvH80.jpg" alt="bottle"><p class="tle-5">Лучшие отели</p><p class="vtor5">Вьетнама</p></div>
         <div class="footer grid-6"><img src="vetnam.QvH80.jpg" alt="bottle"><p class="tle-5">Лучшие отели</p><p class="vtor5">Вьетнама</p></div>
-        <div class="footer grid-7"><img src="vetnam.QvH80.jpg" alt="bottle"><p class="tle-5">Лучшие отели</p><p class="vtor5">Вьетнама</p></div> 
-        <div class="footer grid-8"><img src="vetnam.QvH80.jpg" alt="bottle"><p class="tle-5">Лучшие отели</p><p class="vtor5">Вьетнама</p></div>
+        <div class="footer grid-7"><img src="vetnam.QvH80.jpg" alt="bottle"><p class="tle-5">Лучшие каврп  отели</p><p class="vtor5">Вьетнама</p></div> 
+        <div class="footer grid-8"><img src="vetnam.QvH80.jpg" alt="bottle"><p class="tle-255">Изменение  в HTML </p><p class="vtor5">Вьет</p></div>
     </div>  
   
     
